--- a/portlet/ecm/src/main/webapp/skin/webui/component/explorer/UIJCRExplorer/VistaStylesheet.css
+++ b/portlet/ecm/src/main/webapp/skin/webui/component/explorer/UIJCRExplorer/VistaStylesheet.css
@@ -612,3 +612,35 @@
 .UIJCRExplorer .UIConfirmMessage .Text {
 	margin-left: 40px;
 }
+
+/*================================UIUploadForm===================================*/
+.UIJCRExplorerPortlet .UIUploadManager .SelectFileFrame .FileNameLabel { 
+	width: 300px;
+	overflow: hidden;
+	margin: 0px;
+}
+
+/*====================================UIAnyPermission==================================*/
+.UIJCRExplorerPortlet .UIGroupMembershipSelector .UIAnyPermission {
+	border: 1px solid #B7B7B7;
+	margin-bottom: 2px;
+}
+
+.UIJCRExplorerPortlet .UIGroupMembershipSelector .UIAnyPermission .UIFormWithTitle {
+	width: auto;
+	margin: 0px;
+}
+
+.UIJCRExplorerPortlet .UIGroupMembershipSelector .UIAnyPermission .UIFormGrid {
+	width: auto;
+	margin: 0px;
+}
+
+.UIJCRExplorerPortlet .UIGroupMembershipSelector .UIAnyPermission .UIFormWithTitle .HorizontalLayout {	
+	padding: 0px;
+}
+
+.UIJCRExplorerPortlet .UIGroupMembershipSelector .UIAnyPermission .UIFormWithTitle .UIFormGrid td {	
+	vertical-align: middle;
+	padding: 2px;
+}
